testdata/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2020-01-01 00:00:00.000000

